# test-bazel-repo

./: .bazelrc  .gitignore  BUILD  BUILD.bazel  Dockerfile  README.md  WORKSPACE  WORKSPACE-copy  WORKSPACE.bazel  app.py  hello.py  main.py  main_simple.py  setup_env.sh
.github/workflows/: python-build-on-pr.yml
