load("@rules_python//python:defs.bzl", "py_binary")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

py_binary(
    name = "main",
    srcs = ["main.py"],
    python_version = "PY3",
)

py_binary(
    name = "main_simple",
    srcs = ["main_simple.py"],
    python_version = "PY3",
)

container_image(
    name = "app_image",
    base = "@python39_slim//image",
    files = [":main_simple"],
    entrypoint = ["python", "/main_simple"],
)

container_image(
    name = "app_image_simple",
    base = "@python39_slim//image",
    files = [":main_simple"],
    entrypoint = ["python", "/main_simple"],
)

