load("@rules_python//python:defs.bzl", "py_binary")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@rules_pkg//:pkg.bzl", "pkg_tar")  # add rules_pkg in WORKSPACE if you haven't

py_binary(
    name = "main",
    srcs = ["main.py"],
    python_version = "PY3",
)

py_binary(
    name = "main_simple",
    srcs = ["main_simple.py"],
    python_version = "PY3",
)

# Package the script(s) as a filesystem layer.
# This puts main_simple.py at /main_simple.py inside the image.
pkg_tar(
    name = "app_layer",
    srcs = ["main_simple.py"],
    mode = "0644",
    package_dir = "/",
)

# Build the OCI image using your pulled python:3.9-slim base
oci_image(
    name = "app_image",
    base = "@python39_slim",             # from oci_pull in WORKSPACE
    entrypoint = ["python", "/main_simple.py"],
    tars = [":app_layer"],
)

# If you want a second image identical to app_image (like your app_image_simple)
oci_image(
    name = "app_image_simple",
    base = "@python39_slim",
    entrypoint = ["python", "/main_simple.py"],
    tars = [":app_layer"],
)

# Load into local Docker/Podman: bazel run //:app_image.load
oci_load(
    name = "app_image.load",
    image = ":app_image",
    repo_tags = ["app_image:latest"],
)

oci_load(
    name = "app_image_simple.load",
    image = ":app_image_simple",
    repo_tags = ["app_image_simple:latest"],
)
