load("@rules_python//python:defs.bzl", "py_binary")
load("@io_bazel_rules_docker//contrib:dockerfile_build.bzl", "dockerfile_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_load")

py_binary(
    name = "main",
    srcs = ["main.py"],
    python_version = "PY3",
)

py_binary(
    name = "main_simple",
    srcs = ["main_simple.py"],
    python_version = "PY3",
)


# Load the built image into your local Docker
container_load(
    name = "app_image_dockerfile.load",
    image = ":app_image_dockerfile",
    repo_tags = ["app_image_dockerfile:latest"],
)
